[package]
name = "webext_parser"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.11.0"